# spartan-circom

./: .gitmodules  Cargo.toml  README.MD
circuit_reader/: Cargo.toml
circuit_reader/src/: circom_reader.rs  lib.rs
circuits/: .gitignore  multiplier2.circom  multiplier2.r1cs  witness.wtns
circuits/scripts/: compile_circuit.sh  witgen.sh
spartan-circom/: Cargo.toml
spartan-circom/src/: lib.rs  witness_reader.rs
