[package]
name = "spartan-circom"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
curve25519-dalek = { version = "4.1.1", features = [
    "group",
    "serde",
    "alloc",
    "rand_core",
], default-features = false }
ff = "0.13.1"
merlin = "3.0.0"
spartan = { path = "../spartan" }
circuit_reader = { path = "../circuit_reader" }
